Fix url input field visibility

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1012,5 +1012,10 @@ button.button.luma {
 }
 
 input.hidden {
-  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: transparent;
+  background-color: transparent;
+  border: none;
 }
